# kilmurry-rezlynx-gateway

./: .gitignore  QUICK-START-WINDOWS.md  README.md  install-windows.ps1  pyproject.toml
config/: secrets.toml.example  settings.toml  settings.toml.example
docs/: architecture-notes.md  assumptions.md  dashboard-refresh-contract-v1.json  field-mapping.md  handoff-to-desktop.md  how-to-run.md  kilmurrybot-dashboard-refresh-contract.md  kilmurrybot-server-handoff.md  live-access-decision-note.md  shadow-readiness.md  source-inventory-matrix.md  unresolved-issues.md
samples/dashboard-mockup/: faye-dashboard.html
samples/feeds/: rezlynx-revenue-feed-2026-05-11-2026-05-11T175052Z.json
samples/manifests/: rezlynx-manifest-2026-05-11-2026-05-11T175052Z.json
samples/summaries/: rezlynx-summary-latest.html
src/kilmurry_gateway/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  mappings.py  models.py  pipeline.py  run_context.py  validate.py
src/kilmurry_gateway/adapters/: __init__.py  base.py  composite.py  hunter_replay.py  mock.py  rezlynx_report_data.py  rezlynx_soap.py
src/kilmurry_gateway/publish/: __init__.py  writer.py
src/kilmurry_gateway/templates/: summary.html.j2
src/kilmurry_gateway/transform/: __init__.py  feed_builder.py  summary_builder.py
tests/: test_hunter_replay.py  test_pipeline.py  test_transform.py  test_validate.py
