[project]
name = "kilmurry-gateway"
version = "0.1.0"
description = "Desktop Data Gateway — RezLynx PMS → OneDrive handoff (Right Revenue replacement, Phase 1 MVP)"
authors = [
    { name = "Stephen King" },
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.1",
    "requests>=2.32",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "freezegun>=1.5",
]
soap = [
    "zeep>=4.2",  # only needed if we end up using the legacy HotSoft SOAP API
]

[project.scripts]
gateway = "kilmurry_gateway.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kilmurry_gateway" = ["templates/*.html.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
